# spout_next

./: .gitignore  Cargo.toml  README.md  arch.excalidraw
spout_core/: Cargo.toml  README.md
spout_core/src/: config.rs  error.rs  identity.rs  ids.rs  lib.rs  profile.rs  test_utils.rs
spout_core/src/entity/: group.rs  group_admin.rs  group_banned.rs  group_post.rs  group_topic.rs  group_user.rs  identity.rs  mod.rs  profile.rs  tests.rs
spout_core/src/models/: identity.rs  migrator.rs  mod.rs  profile.rs
spout_core/src/models/group/: mod.rs  post.rs  topic.rs  user.rs
spout_core/src/models/migrator/: README.md  m20251212_000001_create_identity_table.rs  m20251212_000002_create_profiles_table.rs  m20251212_000003_create_groups_table.rs  m20251212_000004_create_group_admins_table.rs  m20251212_000005_create_group_banned_table.rs  m20251212_000006_create_group_users_table.rs  m20251212_000007_create_group_topics_table.rs  m20251212_000008_create_group_posts_table.rs
spout_core/src/service/: groups.rs  identities.rs  mod.rs  posts.rs  profiles.rs
spout_ui/: Cargo.toml  Dioxus.toml
spout_ui/src/: main.rs
