[workspace]
members = ["spout_core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# repository = "https://github.com/SuddenlyHazel/spout_next"
readme = "README.md"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
iroh = { version = "0.95.1", features = ["metrics"] }
zel_core = { version = "0.4.0", features = ["metrics"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
async-trait = "0.1.89"
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "sqlite", "uuid", "chrono", "derive"] }
rand = "0.9.2"
bytes = { version = "1.11.0", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
