[workspace]
members = [
    "spout_core",
    "spout_ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.89"
dirs = "6.0.0"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"

[workspace.dependencies.sea-orm]
version = "1.1.19"
features = ["sqlx-all", "macros", "runtime-tokio", "with-uuid", "with-chrono"]

[workspace.dependencies.sea-orm-migration]
version = "1.1.19"
features = ["sqlx-all", "runtime-tokio", "with-uuid", "with-chrono"]

[workspace.dependencies.bytes]
version = "1.11.0"
features = ["serde"]

[workspace.dependencies.chrono]
version = "0.4.42"
features = ["serde"]

[workspace.dependencies.iroh]
version = "0.95.1"
features = ["metrics"]

[workspace.dependencies.sqlx]
version = "0.8"
features = [
    "runtime-tokio",
    "any",
    "sqlite",
    "uuid",
    "chrono",
    "derive",
]

[workspace.dependencies.tokio]
version = "1.48.0"
features = ["full"]

[workspace.dependencies.uuid]
version = "1.19.0"
features = [
    "v7",
    "serde",
]

[workspace.dependencies.zel_core]
version = "0.5.0"
features = ["metrics"]
