[package]
name = "spout_core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
tokio.workspace = true

iroh.workspace = true
zel_core.workspace = true
async-trait.workspace = true
rand.workspace = true

serde.workspace = true
serde_json.workspace = true
bytes.workspace = true

thiserror.workspace = true

sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true

dirs.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
